--- a/SyncPDFViewerInterop/Npm/package.json
+++ b/SyncPDFViewerInterop/Npm/package.json
@@ -15,6 +15,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@syncfusion/ej2": "^25.2.4"
+    "@syncfusion/ej2": "^25.2.4",
+    "@syncfusion/ej2-pdfviewer": "^25.2.4"
   }
 }
